[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catscan"
version = "0.1.1"
description = "CatSCAN: Terraform Cloud multi-workspace scanner"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Simon Farrell", email = "you@example.com" }
]
requires-python = ">=3.9"
dependencies = [
  "requests>=2.0",
  "rich>=10.0"
]

[project.scripts]
catscan = "catscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["catscan", "catscan.*"]
